2010-02-04  Jaroslav Hajek  <highegg@gmail.com>

	* chMatrix.h (charMatrix): Rebase directly on Array<char>.
	* chNDArray.h (charNDArray): Ditto.
	* chMatrix.cc: Update.
	* chNDArray.cc: Update.
	* MArray-ch.cc: Remove.
	* Makefile.am: Update.

2010-02-04  John W. Eaton  <jwe@octave.org>

	* lo-cutils.c (gethostname): Delete function.
	* lo-sysdep.h (gethostname): Delete declaration.

2010-02-03  John W. Eaton  <jwe@octave.org>

	* oct-syscalls.h, oct-syscalls.cc (octave_fcntl): Assume fcntl exists.
	Rename from octave_syscalls::fcntl.
	(octave_syscalls::popen2): Call octave_fcntl, not fcntl.
	* cmd-hist.cc, lo-sysdep.cc, oct-syscalls.cc:
	Include <fcntl.h> unconditionally.

2010-02-03  John W. Eaton  <jwe@octave.org>

	* dbleSVD.cc (SVD::init): Ensure args to std::max are the same type.
	* CmplxSVD.cc (ComplexSVD::init): Likewise.
	* floatSVD.cc (FloatSVD::init): Likewise.
	* fCmplxSVD.cc (FloatComplexSVD::init): Likewise.
	* idx-vector.cc (idx_range_rep): Likewise.
	* Array.cc (Array<T>::nth_element): Likewise.

	* lo-specfun.cc (null_dims): Delete unused static variable.
	(betainc): Call dim_vector (0, 0), not dim_vector (0).

2010-02-03  John W. Eaton  <jwe@octave.org>

	* file-ops.h (octave_canonicalize_file_name): Rename from
	file_ops::canonicalize_file_name.

2010-02-03  John W. Eaton  <jwe@octave.org>

	* file-ops.cc (canonicalize_file_name):
	Don't pass current directory to octave_env::make_absolute.
	* cmd-edit.cc (do_decode_prompt_string): Likewise.

	* oct-env.h (octave_env::get_current_directory):
	Rename from octave_env::getcwd.
	(octave_env::make_absolute): Provide default value for second arg.

	* lo-sysdep.cc (octave_getcwd): Assume we are using gnulib
	getcwd module.

2010-02-02  John W. Eaton  <jwe@octave.org>

	* oct-time.h: Include <ctime>, not "systime.h".
	* oct-time.cc: Include <strftime.h>, not "strftime.h".
	Don't include <windows.h>.

	* systime.h: Delete.
	* Makefile.am (INCS): Remove it from the list.
