@@ -69,6 +69,14 @@ extern OCTAVE_API bool xisinf (double x);
 extern OCTAVE_API bool octave_is_NA (double x);
 extern OCTAVE_API bool octave_is_NaN_or_NA (double x) GCC_ATTR_DEPRECATED;
 
+// Generic xmin, xmax definitions
+template <class T>
+inline T xmin (T x, T y)
+{ return x <= y ? x : y; }
+template <class T>
+inline T xmax (T x, T y)
+{ return x >= y ? x : y; }
+
 // This form is favorable. GCC will translate (x <= y ? x : y) without a jump,
 // hence the only conditional jump involved will be the first (xisnan), infrequent
 // and hence friendly to branch prediction.
